[gd_scene load_steps=8 format=2]

[ext_resource path="res://Interactables/DoorManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tilemaps/office_layer2.tsx" type="TileSet" id=2]
[ext_resource path="res://Tilemaps/office_layer1.tsx" type="TileSet" id=3]
[ext_resource path="res://Interactables/WoodenDoor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/OfficeFloor2.gd" type="Script" id=5]
[ext_resource path="res://Player_Components/Player.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 3.5 )

[node name="OfficeFloor2" type="Node2D"]
script = ExtResource( 5 )

[node name="Layer1" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65537, 145, 0, 65538, 145, 0, 65539, 145, 0, 65540, 145, 0, 65541, 145, 0, 131073, 149, 0, 131074, 149, 0, 131075, 149, 0, 131076, 149, 0, 131077, 149, 0, 196609, 161, 0, 196610, 161, 0, 196611, 161, 0, 196612, 161, 0, 196613, 161, 0, 262145, 125, 0, 262146, 126, 0, 262147, 126, 0, 262148, 126, 0, 262149, 126, 0, 327681, 141, 0, 327682, 142, 0, 327683, 142, 0, 327684, 142, 0, 327685, 142, 0, 393217, 141, 0, 393218, 142, 0, 393219, 142, 0, 393220, 142, 0, 393221, 142, 0, 458753, 141, 0, 458754, 142, 0, 458755, 142, 0, 458756, 142, 0, 458757, 142, 0, 524289, 141, 0, 524290, 142, 0, 524291, 142, 0, 524292, 142, 0, 524293, 142, 0, 589825, 141, 0, 589826, 142, 0, 589827, 142, 0, 589828, 142, 0, 589829, 142, 0, 589830, 144, 0, 589831, 145, 0, 589832, 145, 0, 589833, 145, 0, 589834, 145, 0, 589835, 145, 0, 589836, 145, 0, 589837, 145, 0, 589838, 145, 0, 589839, 145, 0, 589840, 145, 0, 589841, 145, 0, 589842, 145, 0, 589843, 145, 0, 589844, 145, 0, 589845, 145, 0, 589846, 146, 0, 655361, 141, 0, 655362, 142, 0, 655363, 142, 0, 655364, 142, 0, 655365, 142, 0, 655366, 148, 0, 655367, 149, 0, 655368, 149, 0, 655369, 149, 0, 655370, 149, 0, 655371, 149, 0, 655372, 149, 0, 655373, 149, 0, 655374, 149, 0, 655375, 149, 0, 655376, 149, 0, 655377, 149, 0, 655378, 149, 0, 655379, 149, 0, 655380, 149, 0, 655381, 149, 0, 655382, 150, 0, 720897, 141, 0, 720898, 142, 0, 720899, 142, 0, 720900, 142, 0, 720901, 142, 0, 720902, 160, 0, 720903, 161, 0, 720904, 161, 0, 720905, 161, 0, 720906, 161, 0, 720907, 161, 0, 720908, 161, 0, 720909, 161, 0, 720910, 161, 0, 720911, 161, 0, 720912, 161, 0, 720913, 161, 0, 720914, 161, 0, 720915, 161, 0, 720916, 161, 0, 720917, 161, 0, 720918, 162, 0, 786433, 141, 0, 786434, 142, 0, 786435, 142, 0, 786436, 142, 0, 786437, 142, 0, 786438, 142, 0, 786439, 142, 0, 786440, 142, 0, 786441, 142, 0, 786442, 142, 0, 786443, 142, 0, 786444, 142, 0, 786445, 142, 0, 786446, 142, 0, 786447, 142, 0, 786448, 142, 0, 786449, 142, 0, 786450, 142, 0, 786451, 142, 0, 786452, 142, 0, 786453, 142, 0, 786454, 142, 0, 851969, 141, 0, 851970, 142, 0, 851971, 142, 0, 851972, 142, 0, 851973, 142, 0, 851974, 142, 0, 851975, 142, 0, 851976, 142, 0, 851977, 142, 0, 851978, 142, 0, 851979, 142, 0, 851980, 142, 0, 851981, 142, 0, 851982, 142, 0, 851983, 142, 0, 851984, 142, 0, 851985, 142, 0, 851986, 142, 0, 851987, 142, 0, 851988, 142, 0, 851989, 142, 0, 851990, 142, 0, 917505, 141, 0, 917506, 142, 0, 917507, 142, 0, 917508, 142, 0, 917509, 142, 0, 917510, 142, 0, 917511, 142, 0, 917512, 142, 0, 917513, 142, 0, 917514, 142, 0, 917515, 142, 0, 917516, 142, 0, 917517, 142, 0, 917518, 142, 0, 917519, 142, 0, 917520, 142, 0, 917521, 142, 0, 917522, 142, 0, 917523, 142, 0, 917524, 142, 0, 917525, 142, 0, 917526, 142, 0, 983041, 141, 0, 983042, 142, 0, 983043, 142, 0, 983044, 142, 0, 983045, 142, 0, 983046, 142, 0, 983047, 142, 0, 983048, 142, 0, 983049, 142, 0, 983050, 142, 0, 983051, 142, 0, 983052, 142, 0, 983053, 142, 0, 983054, 142, 0, 983055, 142, 0, 983056, 142, 0, 983057, 142, 0, 983058, 142, 0, 983059, 142, 0, 983060, 142, 0, 983061, 142, 0, 983062, 142, 0, 1048577, 141, 0, 1048578, 142, 0, 1048579, 142, 0, 1048580, 142, 0, 1048581, 142, 0, 1048582, 142, 0, 1048583, 142, 0, 1048584, 142, 0, 1048585, 142, 0, 1048586, 142, 0, 1048587, 142, 0, 1048588, 142, 0, 1048589, 142, 0, 1048590, 142, 0, 1048591, 142, 0, 1048592, 142, 0, 1048593, 142, 0, 1048594, 142, 0, 1048595, 142, 0, 1048596, 142, 0, 1048597, 142, 0, 1048598, 142, 0, 1114130, 142, 0, 1114131, 142, 0, 1114132, 142, 0, 1114133, 142, 0, 1114134, 142, 0, 1179666, 142, 0, 1179667, 142, 0, 1179668, 142, 0, 1179669, 142, 0, 1179670, 142, 0, 1245202, 142, 0, 1245203, 142, 0, 1245204, 142, 0, 1245205, 142, 0, 1245206, 142, 0, 1310738, 142, 0, 1310739, 142, 0, 1310740, 142, 0, 1310741, 142, 0, 1310742, 142, 0, 1376274, 142, 0, 1376275, 142, 0, 1376276, 142, 0, 1376277, 142, 0, 1376278, 142, 0, 1441810, 142, 0, 1441811, 142, 0, 1441812, 142, 0, 1441813, 142, 0, 1441814, 142, 0, 1507333, 145, 0, 1507334, 145, 0, 1507335, 145, 0, 1507336, 145, 0, 1507337, 145, 0, 1507338, 145, 0, 1507339, 145, 0, 1507340, 145, 0, 1507341, 145, 0, 1507342, 145, 0, 1507343, 145, 0, 1507344, 145, 0, 1507345, 146, 0, 1507346, 142, 0, 1507347, 142, 0, 1507348, 142, 0, 1507349, 142, 0, 1507350, 142, 0, 1507351, 144, 0, 1507352, 145, 0, 1507353, 145, 0, 1507354, 145, 0, 1507355, 145, 0, 1507356, 145, 0, 1507357, 145, 0, 1507358, 145, 0, 1507359, 145, 0, 1507360, 145, 0, 1507361, 145, 0, 1507362, 145, 0, 1507363, 145, 0, 1572869, 149, 0, 1572870, 149, 0, 1572871, 149, 0, 1572872, 149, 0, 1572873, 149, 0, 1572874, 149, 0, 1572875, 149, 0, 1572876, 149, 0, 1572877, 149, 0, 1572878, 149, 0, 1572879, 149, 0, 1572880, 149, 0, 1572881, 150, 0, 1572882, 142, 0, 1572883, 142, 0, 1572884, 142, 0, 1572885, 142, 0, 1572886, 142, 0, 1572887, 148, 0, 1572888, 149, 0, 1572889, 149, 0, 1572890, 149, 0, 1572891, 149, 0, 1572892, 149, 0, 1572893, 149, 0, 1572894, 149, 0, 1572895, 149, 0, 1572896, 149, 0, 1572897, 149, 0, 1572898, 149, 0, 1572899, 149, 0, 1638405, 168, 0, 1638406, 161, 0, 1638407, 161, 0, 1638408, 161, 0, 1638409, 161, 0, 1638410, 161, 0, 1638411, 161, 0, 1638412, 161, 0, 1638413, 161, 0, 1638414, 161, 0, 1638415, 161, 0, 1638416, 161, 0, 1638417, 162, 0, 1638418, 142, 0, 1638419, 142, 0, 1638420, 142, 0, 1638421, 142, 0, 1638422, 142, 0, 1638423, 160, 0, 1638424, 161, 0, 1638425, 161, 0, 1638426, 161, 0, 1638427, 161, 0, 1638428, 161, 0, 1638429, 161, 0, 1638430, 161, 0, 1638431, 161, 0, 1638432, 161, 0, 1638433, 161, 0, 1638434, 161, 0, 1638435, 161, 0, 1703941, 142, 0, 1703942, 142, 0, 1703943, 142, 0, 1703944, 142, 0, 1703945, 142, 0, 1703946, 142, 0, 1703947, 142, 0, 1703948, 142, 0, 1703949, 142, 0, 1703950, 142, 0, 1703951, 142, 0, 1703952, 142, 0, 1703953, 142, 0, 1703954, 142, 0, 1703955, 142, 0, 1703956, 142, 0, 1703957, 142, 0, 1703958, 142, 0, 1703959, 142, 0, 1703960, 142, 0, 1703961, 142, 0, 1703962, 142, 0, 1703963, 142, 0, 1703964, 142, 0, 1703965, 142, 0, 1703966, 142, 0, 1703967, 142, 0, 1703968, 142, 0, 1703969, 142, 0, 1703970, 142, 0, 1703971, 142, 0, 1769477, 142, 0, 1769478, 142, 0, 1769479, 142, 0, 1769480, 142, 0, 1769481, 142, 0, 1769482, 142, 0, 1769483, 142, 0, 1769484, 142, 0, 1769485, 142, 0, 1769486, 142, 0, 1769487, 142, 0, 1769488, 142, 0, 1769489, 142, 0, 1769490, 142, 0, 1769491, 142, 0, 1769492, 142, 0, 1769493, 142, 0, 1769494, 142, 0, 1769495, 142, 0, 1769496, 142, 0, 1769497, 142, 0, 1769498, 142, 0, 1769499, 142, 0, 1769500, 142, 0, 1769501, 142, 0, 1769502, 142, 0, 1769503, 142, 0, 1769504, 142, 0, 1769505, 142, 0, 1769506, 142, 0, 1769507, 142, 0, 1835013, 142, 0, 1835014, 142, 0, 1835015, 142, 0, 1835016, 142, 0, 1835017, 142, 0, 1835018, 142, 0, 1835019, 142, 0, 1835020, 142, 0, 1835021, 142, 0, 1835022, 142, 0, 1835023, 142, 0, 1835024, 142, 0, 1835025, 142, 0, 1835026, 142, 0, 1835027, 142, 0, 1835028, 142, 0, 1835029, 142, 0, 1835030, 142, 0, 1835031, 142, 0, 1835032, 142, 0, 1835033, 142, 0, 1835034, 142, 0, 1835035, 142, 0, 1835036, 142, 0, 1835037, 142, 0, 1835038, 142, 0, 1835039, 142, 0, 1835040, 142, 0, 1835041, 142, 0, 1835042, 142, 0, 1835043, 142, 0, 1900549, 142, 0, 1900550, 142, 0, 1900551, 142, 0, 1900552, 142, 0, 1900553, 142, 0, 1900554, 142, 0, 1900555, 142, 0, 1900556, 142, 0, 1900557, 142, 0, 1900558, 142, 0, 1900559, 142, 0, 1900560, 142, 0, 1900561, 142, 0, 1900562, 142, 0, 1900563, 142, 0, 1900564, 142, 0, 1900565, 142, 0, 1900566, 142, 0, 1900567, 142, 0, 1900568, 142, 0, 1900569, 142, 0, 1900570, 142, 0, 1900571, 142, 0, 1900572, 142, 0, 1900573, 142, 0, 1900574, 142, 0, 1900575, 142, 0, 1900576, 142, 0, 1900577, 142, 0, 1900578, 142, 0, 1900579, 142, 0, 1966085, 142, 0, 1966086, 142, 0, 1966087, 142, 0, 1966088, 142, 0, 1966089, 142, 0, 1966090, 142, 0, 1966091, 142, 0, 1966092, 142, 0, 1966093, 142, 0, 1966094, 142, 0, 1966095, 142, 0, 1966096, 142, 0, 1966097, 142, 0, 1966098, 142, 0, 1966099, 142, 0, 1966100, 142, 0, 1966101, 142, 0, 1966102, 142, 0, 1966103, 142, 0, 1966104, 142, 0, 1966105, 142, 0, 1966106, 142, 0, 1966107, 142, 0, 1966108, 142, 0, 1966109, 142, 0, 1966110, 142, 0, 1966111, 142, 0, 1966112, 142, 0, 1966113, 142, 0, 1966114, 142, 0, 1966115, 142, 0, 2031621, 142, 0, 2031622, 142, 0, 2031623, 142, 0, 2031624, 142, 0, 2031625, 142, 0, 2031647, 142, 0, 2031648, 142, 0, 2031649, 142, 0, 2031650, 142, 0, 2031651, 142, 0, 2097157, 142, 0, 2097158, 142, 0, 2097159, 142, 0, 2097160, 142, 0, 2097161, 142, 0, 2097183, 142, 0, 2097184, 142, 0, 2097185, 142, 0, 2097186, 142, 0, 2097187, 142, 0, 2162693, 142, 0, 2162694, 142, 0, 2162695, 142, 0, 2162696, 142, 0, 2162697, 142, 0, 2162719, 142, 0, 2162720, 142, 0, 2162721, 142, 0, 2162722, 142, 0, 2162723, 142, 0, 2228229, 142, 0, 2228230, 142, 0, 2228231, 142, 0, 2228232, 142, 0, 2228233, 142, 0, 2228237, 145, 0, 2228238, 145, 0, 2228239, 145, 0, 2228240, 145, 0, 2228241, 145, 0, 2228242, 145, 0, 2228243, 145, 0, 2228244, 145, 0, 2228245, 145, 0, 2228246, 145, 0, 2228247, 145, 0, 2228248, 145, 0, 2228249, 145, 0, 2228250, 145, 0, 2228251, 145, 0, 2228252, 145, 0, 2228253, 145, 0, 2228254, 146, 0, 2228255, 142, 0, 2228256, 142, 0, 2228257, 142, 0, 2228258, 142, 0, 2228259, 142, 0, 2293765, 142, 0, 2293766, 142, 0, 2293767, 142, 0, 2293768, 142, 0, 2293769, 142, 0, 2293773, 149, 0, 2293774, 149, 0, 2293775, 149, 0, 2293776, 149, 0, 2293777, 149, 0, 2293778, 149, 0, 2293779, 149, 0, 2293780, 149, 0, 2293781, 149, 0, 2293782, 149, 0, 2293783, 149, 0, 2293784, 149, 0, 2293785, 149, 0, 2293786, 149, 0, 2293787, 149, 0, 2293788, 149, 0, 2293789, 149, 0, 2293790, 150, 0, 2293791, 142, 0, 2293792, 142, 0, 2293793, 142, 0, 2293794, 142, 0, 2293795, 142, 0, 2359301, 142, 0, 2359302, 142, 0, 2359303, 142, 0, 2359304, 142, 0, 2359305, 142, 0, 2359308, 146, 0, 2359309, 161, 0, 2359310, 161, 0, 2359311, 161, 0, 2359312, 161, 0, 2359313, 161, 0, 2359314, 161, 0, 2359315, 161, 0, 2359316, 161, 0, 2359317, 161, 0, 2359318, 161, 0, 2359319, 161, 0, 2359320, 161, 0, 2359321, 161, 0, 2359322, 161, 0, 2359323, 161, 0, 2359324, 161, 0, 2359325, 161, 0, 2359326, 162, 0, 2359327, 142, 0, 2359328, 142, 0, 2359329, 142, 0, 2359330, 142, 0, 2359331, 142, 0, 2424837, 142, 0, 2424838, 142, 0, 2424839, 142, 0, 2424840, 142, 0, 2424841, 142, 0, 2424844, 150, 0, 2424845, 142, 0, 2424846, 142, 0, 2424847, 142, 0, 2424848, 142, 0, 2424849, 142, 0, 2424850, 142, 0, 2424851, 142, 0, 2424852, 142, 0, 2424853, 142, 0, 2424854, 142, 0, 2424855, 142, 0, 2424856, 142, 0, 2424857, 142, 0, 2424858, 142, 0, 2424859, 142, 0, 2424860, 142, 0, 2424861, 142, 0, 2424862, 142, 0, 2424863, 142, 0, 2424864, 142, 0, 2424865, 142, 0, 2424866, 142, 0, 2424867, 142, 0, 2490373, 142, 0, 2490374, 142, 0, 2490375, 142, 0, 2490376, 142, 0, 2490377, 142, 0, 2490380, 162, 0, 2490381, 142, 0, 2490382, 142, 0, 2490383, 142, 0, 2490384, 142, 0, 2490385, 142, 0, 2490386, 142, 0, 2490387, 142, 0, 2490388, 142, 0, 2490389, 142, 0, 2490390, 142, 0, 2490391, 142, 0, 2490392, 142, 0, 2490393, 142, 0, 2490394, 142, 0, 2490395, 142, 0, 2490396, 142, 0, 2490397, 142, 0, 2490398, 142, 0, 2490399, 142, 0, 2490400, 142, 0, 2490401, 142, 0, 2490402, 142, 0, 2490403, 142, 0, 2555909, 142, 0, 2555910, 142, 0, 2555911, 142, 0, 2555912, 142, 0, 2555913, 142, 0, 2555916, 142, 0, 2555917, 142, 0, 2555918, 142, 0, 2555919, 142, 0, 2555920, 142, 0, 2555921, 142, 0, 2555922, 142, 0, 2555923, 142, 0, 2555924, 142, 0, 2555925, 142, 0, 2555926, 142, 0, 2555927, 142, 0, 2555928, 142, 0, 2555929, 142, 0, 2555930, 142, 0, 2555931, 142, 0, 2555932, 142, 0, 2555933, 142, 0, 2555934, 142, 0, 2555935, 142, 0, 2555936, 142, 0, 2555937, 142, 0, 2555938, 142, 0, 2555939, 142, 0, 2621445, 142, 0, 2621446, 142, 0, 2621447, 142, 0, 2621448, 142, 0, 2621449, 142, 0, 2621453, 142, 0, 2621454, 142, 0, 2621455, 142, 0, 2621456, 142, 0, 2621457, 142, 0, 2621458, 142, 0, 2621459, 142, 0, 2621460, 142, 0, 2621461, 142, 0, 2621462, 142, 0, 2621463, 142, 0, 2621464, 142, 0, 2621465, 142, 0, 2621466, 142, 0, 2621467, 142, 0, 2621468, 142, 0, 2621469, 142, 0, 2621470, 142, 0, 2621471, 142, 0, 2621472, 142, 0, 2621473, 142, 0, 2621474, 142, 0, 2621475, 142, 0, 2686981, 142, 0, 2686982, 142, 0, 2686983, 142, 0, 2686984, 142, 0, 2686985, 142, 0, 2686989, 142, 0, 2686990, 142, 0, 2686991, 142, 0, 2686992, 142, 0, 2686993, 142, 0, 2686994, 142, 0, 2686995, 142, 0, 2686996, 142, 0, 2686997, 142, 0, 2686998, 142, 0, 2686999, 142, 0, 2687000, 142, 0, 2687001, 142, 0, 2687002, 142, 0, 2687003, 142, 0, 2687004, 142, 0, 2687005, 142, 0, 2687006, 142, 0, 2687007, 142, 0, 2687008, 142, 0, 2687009, 142, 0, 2687010, 142, 0, 2687011, 142, 0, 2752517, 142, 0, 2752518, 142, 0, 2752519, 142, 0, 2752520, 142, 0, 2752521, 142, 0, 2752530, 142, 0, 2752531, 142, 0, 2752532, 142, 0, 2752533, 142, 0, 2752534, 142, 0, 2752543, 142, 0, 2752544, 142, 0, 2752545, 142, 0, 2752546, 142, 0, 2752547, 142, 0, 2818053, 142, 0, 2818054, 142, 0, 2818055, 142, 0, 2818056, 142, 0, 2818057, 142, 0, 2818066, 142, 0, 2818067, 142, 0, 2818068, 142, 0, 2818069, 142, 0, 2818070, 142, 0, 2818079, 142, 0, 2818080, 142, 0, 2818081, 142, 0, 2818082, 142, 0, 2818083, 142, 0, 2883589, 142, 0, 2883590, 142, 0, 2883591, 142, 0, 2883592, 142, 0, 2883593, 142, 0, 2883602, 142, 0, 2883603, 142, 0, 2883604, 142, 0, 2883605, 142, 0, 2883606, 142, 0, 2883615, 142, 0, 2883616, 142, 0, 2883617, 142, 0, 2883618, 142, 0, 2883619, 142, 0, 2949125, 142, 0, 2949126, 142, 0, 2949127, 142, 0, 2949128, 142, 0, 2949129, 142, 0, 2949138, 142, 0, 2949139, 142, 0, 2949140, 142, 0, 2949141, 142, 0, 2949142, 142, 0, 2949151, 142, 0, 2949152, 142, 0, 2949153, 142, 0, 2949154, 142, 0, 2949155, 142, 0, 3014661, 142, 0, 3014662, 142, 0, 3014663, 142, 0, 3014664, 142, 0, 3014665, 142, 0, 3014674, 142, 0, 3014675, 142, 0, 3014676, 142, 0, 3014677, 142, 0, 3014678, 142, 0, 3014687, 142, 0, 3014688, 142, 0, 3014689, 142, 0, 3014690, 142, 0, 3014691, 142, 0, 3080197, 142, 0, 3080198, 142, 0, 3080199, 142, 0, 3080200, 142, 0, 3080201, 142, 0, 3080202, 144, 0, 3080203, 145, 0, 3080204, 145, 0, 3080205, 145, 0, 3080206, 145, 0, 3080207, 145, 0, 3080208, 145, 0, 3080209, 146, 0, 3080210, 142, 0, 3080211, 142, 0, 3080212, 142, 0, 3080213, 142, 0, 3080214, 142, 0, 3080215, 144, 0, 3080216, 145, 0, 3080217, 145, 0, 3080218, 145, 0, 3080219, 145, 0, 3080220, 145, 0, 3080221, 145, 0, 3080222, 146, 0, 3080223, 142, 0, 3080224, 142, 0, 3080225, 142, 0, 3080226, 142, 0, 3080227, 142, 0, 3145733, 142, 0, 3145734, 142, 0, 3145735, 142, 0, 3145736, 142, 0, 3145737, 142, 0, 3145738, 148, 0, 3145739, 149, 0, 3145740, 149, 0, 3145741, 149, 0, 3145742, 149, 0, 3145743, 149, 0, 3145744, 149, 0, 3145745, 150, 0, 3145746, 142, 0, 3145747, 142, 0, 3145748, 142, 0, 3145749, 142, 0, 3145750, 142, 0, 3145751, 148, 0, 3145752, 149, 0, 3145753, 149, 0, 3145754, 149, 0, 3145755, 149, 0, 3145756, 149, 0, 3145757, 149, 0, 3145758, 150, 0, 3145759, 142, 0, 3145760, 142, 0, 3145761, 142, 0, 3145762, 142, 0, 3145763, 142, 0, 3211269, 142, 0, 3211270, 142, 0, 3211271, 142, 0, 3211272, 142, 0, 3211273, 142, 0, 3211274, 160, 0, 3211275, 161, 0, 3211276, 161, 0, 3211277, 161, 0, 3211278, 161, 0, 3211279, 161, 0, 3211280, 161, 0, 3211281, 162, 0, 3211282, 142, 0, 3211283, 142, 0, 3211284, 142, 0, 3211285, 142, 0, 3211286, 142, 0, 3211287, 160, 0, 3211288, 161, 0, 3211289, 161, 0, 3211290, 161, 0, 3211291, 161, 0, 3211292, 161, 0, 3211293, 161, 0, 3211294, 162, 0, 3211295, 142, 0, 3211296, 142, 0, 3211297, 142, 0, 3211298, 142, 0, 3211299, 142, 0, 3276805, 142, 0, 3276806, 142, 0, 3276807, 142, 0, 3276808, 142, 0, 3276809, 142, 0, 3276810, 142, 0, 3276811, 142, 0, 3276812, 142, 0, 3276813, 142, 0, 3276814, 142, 0, 3276815, 142, 0, 3276816, 142, 0, 3276817, 142, 0, 3276818, 142, 0, 3276819, 142, 0, 3276820, 142, 0, 3276821, 142, 0, 3276822, 142, 0, 3276823, 142, 0, 3276824, 142, 0, 3276825, 142, 0, 3276826, 142, 0, 3276827, 142, 0, 3276828, 142, 0, 3276829, 142, 0, 3276830, 142, 0, 3276831, 142, 0, 3276832, 142, 0, 3276833, 142, 0, 3276834, 142, 0, 3276835, 142, 0, 3342341, 142, 0, 3342342, 142, 0, 3342343, 142, 0, 3342344, 142, 0, 3342345, 142, 0, 3342346, 142, 0, 3342347, 142, 0, 3342348, 142, 0, 3342349, 142, 0, 3342350, 142, 0, 3342351, 142, 0, 3342352, 142, 0, 3342353, 142, 0, 3342354, 142, 0, 3342355, 142, 0, 3342356, 142, 0, 3342357, 142, 0, 3342358, 142, 0, 3342359, 142, 0, 3342360, 142, 0, 3342361, 142, 0, 3342362, 142, 0, 3342363, 142, 0, 3342364, 142, 0, 3342365, 142, 0, 3342366, 142, 0, 3342367, 142, 0, 3342368, 142, 0, 3342369, 142, 0, 3342370, 142, 0, 3342371, 142, 0, 3407877, 142, 0, 3407878, 142, 0, 3407879, 142, 0, 3407880, 142, 0, 3407881, 142, 0, 3407882, 142, 0, 3407883, 142, 0, 3407884, 142, 0, 3407885, 142, 0, 3407886, 142, 0, 3407887, 142, 0, 3407888, 142, 0, 3407889, 142, 0, 3407890, 142, 0, 3407891, 142, 0, 3407892, 142, 0, 3407893, 142, 0, 3407894, 142, 0, 3407895, 142, 0, 3407896, 142, 0, 3407897, 142, 0, 3407898, 142, 0, 3407899, 142, 0, 3407900, 142, 0, 3407901, 142, 0, 3407902, 142, 0, 3407903, 142, 0, 3407904, 142, 0, 3407905, 142, 0, 3407906, 142, 0, 3407907, 142, 0, 3473413, 142, 0, 3473414, 142, 0, 3473415, 142, 0, 3473416, 142, 0, 3473417, 142, 0, 3473418, 142, 0, 3473419, 142, 0, 3473420, 142, 0, 3473421, 142, 0, 3473422, 142, 0, 3473423, 142, 0, 3473424, 142, 0, 3473425, 142, 0, 3473426, 142, 0, 3473427, 142, 0, 3473428, 142, 0, 3473429, 142, 0, 3473430, 142, 0, 3473431, 142, 0, 3473432, 142, 0, 3473433, 142, 0, 3473434, 142, 0, 3473435, 142, 0, 3473436, 142, 0, 3473437, 142, 0, 3473438, 142, 0, 3473439, 142, 0, 3473440, 142, 0, 3473441, 142, 0, 3473442, 142, 0, 3473443, 142, 0, 3538949, 142, 0, 3538950, 142, 0, 3538951, 142, 0, 3538952, 142, 0, 3538953, 142, 0, 3538954, 142, 0, 3538955, 142, 0, 3538956, 142, 0, 3538957, 142, 0, 3538958, 142, 0, 3538959, 142, 0, 3538960, 142, 0, 3538961, 142, 0, 3538962, 142, 0, 3538963, 142, 0, 3538964, 142, 0, 3538965, 142, 0, 3538966, 142, 0, 3538967, 142, 0, 3538968, 142, 0, 3538969, 142, 0, 3538970, 142, 0, 3538971, 142, 0, 3538972, 142, 0, 3538973, 142, 0, 3538974, 142, 0, 3538975, 142, 0, 3538976, 142, 0, 3538977, 142, 0, 3538978, 142, 0, 3538979, 142, 0 )

[node name="Layer2" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 56, 82 )

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65536, 23, 0, 65542, 25, 0, 131072, 39, 0, 131078, 41, 0, 196608, 39, 0, 196614, 41, 0, 262144, 39, 0, 262150, 41, 0, 327680, 39, 0, 327686, 41, 0, 393216, 39, 0, 393222, 41, 0, 458752, 39, 0, 458758, 41, 0, 524288, 39, 0, 524294, 41, 0, 589824, 39, 0, 589847, 25, 0, 655360, 39, 0, 655383, 41, 0, 720896, 39, 0, 720919, 41, 0, 786432, 39, 0, 786455, 41, 0, 851968, 39, 0, 851991, 41, 0, 917504, 39, 0, 917527, 41, 0, 983040, 39, 0, 983063, 41, 0, 1048576, 39, 0, 1048599, 41, 0, 1114112, 55, 0, 1114113, 56, 0, 1114114, 56, 0, 1114115, 56, 0, 1114116, 56, 0, 1114117, 56, 0, 1114118, 56, 0, 1114119, 56, 0, 1114120, 56, 0, 1114121, 56, 0, 1114122, 56, 0, 1114123, 56, 0, 1114124, 56, 0, 1114125, 56, 0, 1114126, 56, 0, 1114127, 56, 0, 1114128, 56, 0, 1114129, 33, 0, 1114135, 41, 0, 1179665, 39, 0, 1179671, 41, 0, 1245201, 39, 0, 1245207, 41, 0, 1310737, 39, 0, 1310743, 41, 0, 1376273, 39, 0, 1376279, 41, 0, 1441809, 39, 0, 1441815, 41, 0, 1507332, 23, 0, 1507345, 17, 0, 1507351, 18, 0, 1507364, 25, 0, 1572868, 39, 0, 1572900, 41, 0, 1638404, 39, 0, 1638436, 41, 0, 1703940, 39, 0, 1703972, 41, 0, 1769476, 39, 0, 1769508, 41, 0, 1835012, 39, 0, 1835044, 41, 0, 1900548, 39, 0, 1900580, 41, 0, 1966084, 39, 0, 1966116, 41, 0, 2031620, 39, 0, 2031626, 34, 0, 2031627, 56, 0, 2031628, 56, 0, 2031629, 56, 0, 2031630, 56, 0, 2031631, 56, 0, 2031632, 56, 0, 2031633, 56, 0, 2031634, 56, 0, 2031635, 56, 0, 2031636, 56, 0, 2031637, 56, 0, 2031638, 56, 0, 2031639, 56, 0, 2031640, 56, 0, 2031641, 56, 0, 2031642, 56, 0, 2031643, 56, 0, 2031644, 56, 0, 2031645, 56, 0, 2031646, 33, 0, 2031652, 41, 0, 2097156, 39, 0, 2097162, 41, 0, 2097182, 39, 0, 2097188, 41, 0, 2162692, 39, 0, 2162698, 41, 0, 2162718, 39, 0, 2162724, 41, 0, 2228228, 39, 0, 2228234, 41, 0, 2228236, 23, 0, 2228254, 17, 0, 2228260, 41, 0, 2293764, 39, 0, 2293770, 41, 0, 2293772, 39, 0, 2293796, 41, 0, 2359300, 39, 0, 2359306, 41, 0, 2359308, 17, 0, 2359332, 41, 0, 2424836, 39, 0, 2424842, 41, 0, 2424868, 41, 0, 2490372, 39, 0, 2490378, 41, 0, 2490404, 41, 0, 2555908, 39, 0, 2555914, 41, 0, 2555940, 41, 0, 2621444, 39, 0, 2621450, 41, 0, 2621452, 33, 0, 2621476, 41, 0, 2686980, 39, 0, 2686986, 41, 0, 2686988, 39, 0, 2687012, 41, 0, 2752516, 39, 0, 2752522, 41, 0, 2752524, 55, 0, 2752525, 56, 0, 2752526, 56, 0, 2752527, 56, 0, 2752528, 56, 0, 2752529, 33, 0, 2752535, 34, 0, 2752536, 56, 0, 2752537, 56, 0, 2752538, 56, 0, 2752539, 56, 0, 2752540, 56, 0, 2752541, 56, 0, 2752542, 33, 0, 2752548, 41, 0, 2818052, 39, 0, 2818058, 41, 0, 2818065, 39, 0, 2818071, 41, 0, 2818078, 39, 0, 2818084, 41, 0, 2883588, 39, 0, 2883594, 41, 0, 2883601, 39, 0, 2883607, 41, 0, 2883614, 39, 0, 2883620, 41, 0, 2949124, 39, 0, 2949130, 41, 0, 2949137, 39, 0, 2949143, 41, 0, 2949150, 39, 0, 2949156, 41, 0, 3014660, 39, 0, 3014666, 41, 0, 3014673, 39, 0, 3014679, 41, 0, 3014686, 39, 0, 3014692, 41, 0, 3080196, 39, 0, 3080202, 18, 0, 3080209, 17, 0, 3080215, 18, 0, 3080222, 17, 0, 3080228, 41, 0, 3145732, 39, 0, 3145764, 41, 0, 3211268, 39, 0, 3211300, 41, 0, 3276804, 39, 0, 3276836, 41, 0, 3342340, 39, 0, 3342372, 41, 0, 3407876, 39, 0, 3407908, 41, 0, 3473412, 39, 0, 3473444, 41, 0, 3538948, 39, 0, 3538980, 41, 0, 3604484, 55, 0, 3604485, 56, 0, 3604486, 56, 0, 3604487, 56, 0, 3604488, 56, 0, 3604489, 56, 0, 3604490, 56, 0, 3604491, 56, 0, 3604492, 56, 0, 3604493, 56, 0, 3604494, 56, 0, 3604495, 56, 0, 3604496, 56, 0, 3604497, 56, 0, 3604498, 56, 0, 3604499, 56, 0, 3604500, 56, 0, 3604501, 56, 0, 3604502, 56, 0, 3604503, 56, 0, 3604504, 56, 0, 3604505, 56, 0, 3604506, 56, 0, 3604507, 56, 0, 3604508, 56, 0, 3604509, 56, 0, 3604510, 56, 0, 3604511, 56, 0, 3604512, 56, 0, 3604513, 56, 0, 3604514, 56, 0, 3604515, 56, 0, 3604516, 57, 0 )

[node name="DoorManager" parent="." instance=ExtResource( 1 )]
position = Vector2( 55, 41 )
door_type = ExtResource( 4 )

[node name="NorthCam" type="Camera2D" parent="."]
position = Vector2( 200, 165 )
zoom = Vector2( 1.7, 1.7 )

[node name="MidCam" type="Camera2D" parent="."]
position = Vector2( 329, 454 )
zoom = Vector2( 1.7, 1.7 )

[node name="SouthCam" type="Camera2D" parent="."]
position = Vector2( 329, 740 )
zoom = Vector2( 1.7, 1.7 )

[node name="NorthCamTrigger" type="Area2D" parent="."]
position = Vector2( 327, 298 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NorthCamTrigger"]
position = Vector2( 1, 0.5 )
shape = SubResource( 1 )

[node name="MidCamTriggerN" type="Area2D" parent="."]
position = Vector2( 326, 322 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MidCamTriggerN"]
position = Vector2( 1, 0.5 )
shape = SubResource( 1 )

[node name="MidCamTriggerSW" type="Area2D" parent="."]
position = Vector2( 119, 586 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MidCamTriggerSW"]
position = Vector2( 1, 0.5 )
shape = SubResource( 1 )

[node name="MidCamTriggerSE" type="Area2D" parent="."]
position = Vector2( 535, 585 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MidCamTriggerSE"]
position = Vector2( 1, 0.5 )
shape = SubResource( 1 )

[node name="SouthCamTriggerW" type="Area2D" parent="."]
position = Vector2( 119, 609 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SouthCamTriggerW"]
position = Vector2( 1, 0.5 )
shape = SubResource( 1 )

[node name="SouthCamTriggerE" type="Area2D" parent="."]
position = Vector2( 535, 606 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SouthCamTriggerE"]
position = Vector2( 1, 1.5 )
shape = SubResource( 1 )

[connection signal="body_entered" from="NorthCamTrigger" to="." method="_on_NorthCamTrigger_body_entered"]
[connection signal="body_entered" from="MidCamTriggerN" to="." method="_on_MidCamTriggerN_body_entered"]
[connection signal="body_entered" from="MidCamTriggerSW" to="." method="_on_MidCamTriggerSW_body_entered"]
[connection signal="body_entered" from="MidCamTriggerSE" to="." method="_on_MidCamTriggerSE_body_entered"]
[connection signal="body_entered" from="SouthCamTriggerW" to="." method="_on_SouthCamTriggerW_body_entered"]
[connection signal="body_entered" from="SouthCamTriggerE" to="." method="_on_SouthCamTriggerE_body_entered"]
